finished logic, added tests, updated layout

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,12 @@
+* {
+  font-family: 'Roboto Mono', monospace;
+}
+
 body {
   background-color: #333;
 }
 
 #app {
-  margin: 20px;
-  color: #f3f3f3
+  margin: 20px auto;
+  color: #f3f3f3;
 }
