--- a/src/components/Result/Result.scss
+++ b/src/components/Result/Result.scss
@@ -2,6 +2,7 @@
 
 .password-generator {
   &__result {
+    position: relative;
     display: flex;
     flex-direction: column;
     padding-bottom: 1.25rem;
@@ -19,12 +20,26 @@
       font-size: 1.5rem;
       border-radius: 0.5rem;
       border: none;
-      transition: border-bottom-color 500ms ease;
     }
 
-    input.with-password {
-      padding: 0.45rem;
-      border-bottom: 2px solid $success;
+    button {
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      width: 1rem;
+      height: 1.5rem;
+      bottom: 1.8rem;
+      right: 0.5rem;
+      background-color: transparent;
+      border: none;
+      outline: none;
+      transition-duration: 200ms;
+      filter: contrast(10%);
+
+      &:active {
+        background-color: #cccccc;
+        border-radius: 5px;
+      }
     }
   }
 }
