--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 
 * {
   font-family: 'Roboto Mono', monospace;
+  box-sizing: content-box;
 }
 
 body {
@@ -15,55 +16,33 @@ body {
   margin: 2rem auto;
   flex-direction: column;
 
-  @media (min-width: 767px) {
-    width: 60%;
+  &__action-btn {
+    width: 80%;
+    align-self: center;
+    margin-top: 0.75rem;
+    background-color: $white;
+    border: 0;
+    height: 2.5rem;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    color: $black;
+    outline: none;
+    transition-duration: 100ms;
+
+    &:active {
+      background-color: $success;
+    }
   }
 
-  &__settings {
-    margin-bottom: .75rem;
+  @media (min-width: 768px) {
+    width: 40%;
+  }
 
-    &__item {
-      label {
-        display: flex;
-        align-items: center;
-        margin-bottom: 0.25rem;
-      }
+  @media (min-width: 1024px) {
+    width: 30%;
+  }
 
-      input[type="checkbox"] {
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-        width: 1rem;
-        height: 1rem;
-        background-color: $white;
-        outline: none;
-        cursor: pointer;
-        transition-duration: 0.3s;
-
-        &:checked {
-          position: relative;
-          background-color: $success;
-        }
-      }
-
-      span {
-        padding-left: 0.25rem;
-      }
-    }
-
-    &__length {
-      margin-bottom: 0.75rem;
-      input[type="number"] {
-        width: 20%;
-        margin-left: .5rem;
-        text-align: center;
-        outline: none;
-        background-color: transparent;
-        border: none;
-        border-bottom: 1px solid $white;
-        color: $white;
-      }
-
-    }
+  @media (min-width: 1440px) {
+    width: 20%;
   }
 }
